--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,104 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+
+    <form method="post">
+      <fieldset>
+        <legend>Age</legend>
+        <label for="age-1824">18 - 24</label>
+        <input type="checkbox" name="age-1824" id="age-1824" value="18-24">
+        <label for="age-2534">25 - 34</label>
+        <input type="checkbox" name="age-2534" id="age-2534" value="25-34">
+        <label for="age-3544">35 - 44</label>
+        <input type="checkbox" name="age-3544" id="age-3544" value="35-44">
+        <label for="age-4554">45 - 54</label>
+        <input type="checkbox" name="age-4554" id="age-4554" value="45-54">
+        <label for="age-5564">55 - 64</label>
+        <input type="checkbox" name="age-5564" id="age-5564" value="55-64">
+        <label for="age-65">65+</label>
+        <input type="checkbox" name="age-65" id="age-65" value="65">
+      </fieldset>
+      <fieldset>
+        <legend>Work Status</legend>
+        <label for="work-fulltime">Employed: Full-Time</label>
+        <input type="radio" name="work" id="work-fulltime" value="fulltime">
+        <label for="work-parttime">Employed: Part-Time</label>
+        <input type="radio" name="work" id="work-parttime" value="parttime">
+        <label for="work-unemployed">Unemployed</label>
+        <input type="radio" name="work" id="work-unemployed" value="unemployed">
+      </fieldset>
+      <fieldset>
+        <legend>Yearly Household Income</legend>
+        <label for="income-050">Up to $50K</label>
+        <input type="radio" name="income" id="income-050" value="0-50">
+        <label for="income-51100">$51 - $100K</label>
+        <input type="radio" name="income" id="income-51100" value="51-100">
+        <label for="income-101150">$101 - $150K</label>
+        <input type="radio" name="income" id="income-101150" value="101-150">
+        <label for="income-151">More than $150K</label>
+        <input type="radio" name="income" id="income-151" value="151">
+      </fieldset>
+      <fieldset>
+        <legend>Where are you living?</legend>
+        <label for="live-metro">Melbourne</label>
+        <input type="radio" name="live" id="live-metro" value="metro">
+        <label for="live-region">Regional Victoria</label>
+        <input type="radio" name="live" id="live-region" value="region">
+      </fieldset>
+      <fieldset>
+        <legend>Student?</legend>
+        <label for="student-no">No</label>
+        <input type="radio" name="student" id="student-no" value="no">
+        <label for="student-yes">Yes</label>
+        <input type="radio" name="student" id="student-yes" value="yes">
+      </fieldset>
+      <fieldset>
+        <legend>Relationship Status</legend>
+        <label for="rel-single">Single</label>
+        <input type="radio" name="relationship" id="rel-single" value="single">
+        <label for="rel-married">Married</label>
+        <input type="radio" name="relationship" id="rel-married" value="married">
+        <label for="rel-defacto">De Facto Relationship</label>
+        <input type="radio" name="relationship" id="rel-defacto" value="defacto">
+      </fieldset>
+      <fieldset>
+        <legend>Children?</legend>
+        <label for="child-04">Under 5 Years Old</label>
+        <input type="checkbox" name="child-04" id="child-04" value="0-4">
+        <label for="child-514">5 - 14 Years Old</label>
+        <input type="checkbox" name="child514" id="child-514" value="5-14">
+        <label for="child-1518">15 - 18 Years Old</label>
+        <input type="checkbox" name="child-1518" id="child-1518" value="15-18">
+        <label for="child-1922">19 - 22 Years Old</label>
+        <input type="checkbox" name="child-1922" id="child-1922" value="19-22">
+        <label for="child-23">23+ Years Old</label>
+        <input type="checkbox" name="child-23" id="child-23" value="23">
+        <label for="child-0">None</label>
+        <input type="checkbox" name="child-0" id="child-0" value="0">
+      </fieldset>
+      <fieldset>
+        <legend>Immigration Status</legend>
+        <label for="immi-citizen">Citizen</label>
+        <input type="radio" name="immigration" id="immi-citizen" value="citizen">
+        <label for="immi-permanent">Permanent Resident</label>
+        <input type="radio" name="immigration" id="immi-permanent" value="permanent">
+        <label for="immi-temporary">Temporary Resident</label>
+        <input type="radio" name="immigration" id="immi-temporary" value="temporary">
+      </fieldset>
+      <fieldset>
+        <legend>Indigenous or Torres Straight Islander?</legend>
+        <label for="indigenous-yes">Yes</label>
+        <input type="radio" name="indigenous" id="indigenous-yes" value="yes">
+        <label for="indigenous-no">Permanent Resident</label>
+        <input type="radio" name="indigenous" id="indigenous-no" value="no">
+      </fieldset>
+      <fieldset>
+        <legend>Do you, or someone in your household, use any of the following services?</legend>
+        <label for="service-mental">Mental Health Services</label>
+        <input type="checkbox" name="service-mental" id="service-mental" value="mental-health">
+        <label for="service-physical">Services for Physical Disabilities</label>
+        <input type="checkbox" name="service-physical" id="service-physical" value="physical-disability">
+      </fieldset>
+      <button type="submit">Submit</button>
   </body>
 </html>
