--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,21 +8,21 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
 
-    <form method="post">
+    <form method="post" action="/">
       <fieldset>
         <legend>Age</legend>
         <label for="age-1824">18 - 24</label>
-        <input type="checkbox" name="age-1824" id="age-1824" value="18-24">
+        <input type="checkbox" name="age" id="age-1824" value="18-24">
         <label for="age-2534">25 - 34</label>
-        <input type="checkbox" name="age-2534" id="age-2534" value="25-34">
+        <input type="checkbox" name="age" id="age-2534" value="25-34">
         <label for="age-3544">35 - 44</label>
-        <input type="checkbox" name="age-3544" id="age-3544" value="35-44">
+        <input type="checkbox" name="age" id="age-3544" value="35-44">
         <label for="age-4554">45 - 54</label>
-        <input type="checkbox" name="age-4554" id="age-4554" value="45-54">
+        <input type="checkbox" name="age" id="age-4554" value="45-54">
         <label for="age-5564">55 - 64</label>
-        <input type="checkbox" name="age-5564" id="age-5564" value="55-64">
+        <input type="checkbox" name="age" id="age-5564" value="55-64">
         <label for="age-65">65+</label>
-        <input type="checkbox" name="age-65" id="age-65" value="65">
+        <input type="checkbox" name="age" id="age-65" value="65">
       </fieldset>
       <fieldset>
         <legend>Work Status</legend>
@@ -70,17 +70,17 @@
       <fieldset>
         <legend>Children?</legend>
         <label for="child-04">Under 5 Years Old</label>
-        <input type="checkbox" name="child-04" id="child-04" value="0-4">
+        <input type="checkbox" name="child" id="child-04" value="0-4">
         <label for="child-514">5 - 14 Years Old</label>
-        <input type="checkbox" name="child514" id="child-514" value="5-14">
+        <input type="checkbox" name="child" id="child-514" value="5-14">
         <label for="child-1518">15 - 18 Years Old</label>
-        <input type="checkbox" name="child-1518" id="child-1518" value="15-18">
+        <input type="checkbox" name="child" id="child-1518" value="15-18">
         <label for="child-1922">19 - 22 Years Old</label>
-        <input type="checkbox" name="child-1922" id="child-1922" value="19-22">
+        <input type="checkbox" name="child" id="child-1922" value="19-22">
         <label for="child-23">23+ Years Old</label>
-        <input type="checkbox" name="child-23" id="child-23" value="23">
+        <input type="checkbox" name="child" id="child-23" value="23">
         <label for="child-0">None</label>
-        <input type="checkbox" name="child-0" id="child-0" value="0">
+        <input type="checkbox" name="child" id="child-0" value="0">
       </fieldset>
       <fieldset>
         <legend>Immigration Status</legend>
@@ -101,9 +101,9 @@
       <fieldset>
         <legend>Do you, or someone in your household, use any of the following services?</legend>
         <label for="service-mental">Mental Health Services</label>
-        <input type="checkbox" name="service-mental" id="service-mental" value="mental-health">
+        <input type="checkbox" name="services" id="service-mental" value="mental-health">
         <label for="service-physical">Services for Physical Disabilities</label>
-        <input type="checkbox" name="service-physical" id="service-physical" value="physical-disability">
+        <input type="checkbox" name="services" id="service-physical" value="physical-disability">
       </fieldset>
       <button type="submit">Submit</button>
   </body>
