--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,19 +10,19 @@
 
     <form method="post" action="/">
       <fieldset>
-        <legend>Age</legend>
-        <label for="age-1824">18 - 24</label>
-        <input type="checkbox" name="age" id="age-1824" value="18-24">
-        <label for="age-2534">25 - 34</label>
-        <input type="checkbox" name="age" id="age-2534" value="25-34">
-        <label for="age-3544">35 - 44</label>
-        <input type="checkbox" name="age" id="age-3544" value="35-44">
-        <label for="age-4554">45 - 54</label>
-        <input type="checkbox" name="age" id="age-4554" value="45-54">
-        <label for="age-5564">55 - 64</label>
-        <input type="checkbox" name="age" id="age-5564" value="55-64">
-        <label for="age-65">65+</label>
-        <input type="checkbox" name="age" id="age-65" value="65">
+        <legend>Ages</legend>
+        <label for="ages-1824">18 - 24</label>
+        <input type="checkbox" name="ages" id="ages-1824" value="18-24">
+        <label for="ages-2534">25 - 34</label>
+        <input type="checkbox" name="ages" id="ages-2534" value="25-34">
+        <label for="ages-3544">35 - 44</label>
+        <input type="checkbox" name="ages" id="ages-3544" value="35-44">
+        <label for="ages-4554">45 - 54</label>
+        <input type="checkbox" name="ages" id="ages-4554" value="45-54">
+        <label for="ages-5564">55 - 64</label>
+        <input type="checkbox" name="ages" id="ages-5564" value="55-64">
+        <label for="ages-65">65+</label>
+        <input type="checkbox" name="ages" id="ages-65" value="65">
       </fieldset>
       <fieldset>
         <legend>Work Status</legend>
@@ -69,18 +69,18 @@
       </fieldset>
       <fieldset>
         <legend>Children?</legend>
-        <label for="child-04">Under 5 Years Old</label>
-        <input type="checkbox" name="child" id="child-04" value="0-4">
-        <label for="child-514">5 - 14 Years Old</label>
-        <input type="checkbox" name="child" id="child-514" value="5-14">
-        <label for="child-1518">15 - 18 Years Old</label>
-        <input type="checkbox" name="child" id="child-1518" value="15-18">
-        <label for="child-1922">19 - 22 Years Old</label>
-        <input type="checkbox" name="child" id="child-1922" value="19-22">
-        <label for="child-23">23+ Years Old</label>
-        <input type="checkbox" name="child" id="child-23" value="23">
-        <label for="child-0">None</label>
-        <input type="checkbox" name="child" id="child-0" value="0">
+        <label for="children-04">Under 5 Years Old</label>
+        <input type="checkbox" name="children" id="children-04" value="0-4">
+        <label for="children-514">5 - 14 Years Old</label>
+        <input type="checkbox" name="children" id="children-514" value="5-14">
+        <label for="children-1518">15 - 18 Years Old</label>
+        <input type="checkbox" name="children" id="children-1518" value="15-18">
+        <label for="children-1922">19 - 22 Years Old</label>
+        <input type="checkbox" name="children" id="children-1922" value="19-22">
+        <label for="children-23">23+ Years Old</label>
+        <input type="checkbox" name="children" id="children-23" value="23">
+        <label for="children-0">None</label>
+        <input type="checkbox" name="children" id="children-0" value="0">
       </fieldset>
       <fieldset>
         <legend>Immigration Status</legend>
@@ -95,15 +95,15 @@
         <legend>Indigenous or Torres Straight Islander?</legend>
         <label for="indigenous-yes">Yes</label>
         <input type="radio" name="indigenous" id="indigenous-yes" value="yes">
-        <label for="indigenous-no">Permanent Resident</label>
+        <label for="indigenous-no">No</label>
         <input type="radio" name="indigenous" id="indigenous-no" value="no">
       </fieldset>
       <fieldset>
         <legend>Do you, or someone in your household, use any of the following services?</legend>
-        <label for="service-mental">Mental Health Services</label>
-        <input type="checkbox" name="services" id="service-mental" value="mental-health">
-        <label for="service-physical">Services for Physical Disabilities</label>
-        <input type="checkbox" name="services" id="service-physical" value="physical-disability">
+        <label for="services-mental">Mental Health Services</label>
+        <input type="checkbox" name="services" id="services-mental" value="mental-health">
+        <label for="services-physical">Services for Physical Disabilities</label>
+        <input type="checkbox" name="services" id="services-physical" value="physical-disability">
       </fieldset>
       <button type="submit">Submit</button>
   </body>
