--- a/views/budgets.ejs
+++ b/views/budgets.ejs
@@ -8,4 +8,9 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
   </body>
+  <footer>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script type="text/javascript" src="/javascripts/lib/underscore.js"></script>
+    <script type="text/javascript" src="/javascripts/lib/backbone.js"></script>
+  </footer>
 </html>
