set up basic backbone

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -125,6 +125,8 @@
       </div>
     </div>
 
+    <div id="results">
+    </div>
 
     <footer>
       <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
@@ -135,6 +137,8 @@
       <script type="text/javascript" src="/javascripts/collections/budgets.js"></script>
       <script type="text/javascript" src="/javascripts/views/budget-view.js"></script>
       <script type="text/javascript" src="/javascripts/views/budgets-view.js"></script>
+      <script type="text/javascript" src="/javascripts/routers/router.js"></script>
+      <script type="text/javascript" src="/javascripts/bbApp.js"></script>
     </footer>
   </body>
 </html>
