database query working

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
               <label for="work-parttime">Employed: Part-Time</label>
               <input type="radio" name="work-parttime" id="work-parttime" value="work-parttime">
               <label for="work-unemployed">Unemployed</label>
-              <input type="radio" name="work-unemployed" id="work-unemployed" value="word-unemployed">
+              <input type="radio" name="work-unemployed" id="work-unemployed" value="work;-unemployed">
             </fieldset>
             <fieldset>
               <legend>Yearly Household Income</legend>
