--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,104 +19,105 @@
           </h4>
         </div>
         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-        <div class="panel-body">
+          <div class="panel-body">
 
-          <form method="post" action="/">
-            <fieldset>
-              <legend>Ages</legend>
-              <label for="ages-1824">18 - 24</label>
-              <input type="checkbox" name="ages-1824" id="ages-1824" value="ages-1824">
-              <label for="ages-2534">25 - 34</label>
-              <input type="checkbox" name="ages-2534" id="ages-2534" value="ages-2534">
-              <label for="ages-3544">35 - 44</label>
-              <input type="checkbox" name="ages-3544" id="ages-3544" value="ages-3544">
-              <label for="ages-4554">45 - 54</label>
-              <input type="checkbox" name="ages-4554" id="ages-4554" value="ages-4554">
-              <label for="ages-5564">55 - 64</label>
-              <input type="checkbox" name="ages-5564" id="ages-5564" value="ages-5564">
-              <label for="ages-65">65+</label>
-              <input type="checkbox" name="ages-65" id="ages-65" value="ages-65">
-            </fieldset>
-            <fieldset>
-              <legend>Work Status</legend>
-              <label for="work-fulltime">Employed: Full-Time</label>
-              <input type="radio" name="work-fulltime" id="work-fulltime" value="work-fulltime">
-              <label for="work-parttime">Employed: Part-Time</label>
-              <input type="radio" name="work-parttime" id="work-parttime" value="work-parttime">
-              <label for="work-unemployed">Unemployed</label>
-              <input type="radio" name="work-unemployed" id="work-unemployed" value="work;-unemployed">
-            </fieldset>
-            <fieldset>
-              <legend>Yearly Household Income</legend>
-              <label for="income-050">Up to $50K</label>
-              <input type="radio" name="income-050" id="income-050" value="income-050">
-              <label for="income-51100">$51 - $100K</label>
-              <input type="radio" name="income-51100" id="income-51100" value="income-51100">
-              <label for="income-101150">$101 - $150K</label>
-              <input type="radio" name="income-101150" id="income-101150" value="income-101150">
-              <label for="income-151">More than $150K</label>
-              <input type="radio" name="income-151" id="income-151" value="income-151">
-            </fieldset>
-            <fieldset>
-              <legend>Where are you living?</legend>
-              <label for="live-metro">Melbourne</label>
-              <input type="radio" name="live-metro" id="live-metro" value="live-metro">
-              <label for="live-region">Regional Victoria</label>
-              <input type="radio" name="live-region" id="live-region" value="live-region">
-            </fieldset>
-            <fieldset>
-              <legend>Are you a student?</legend>
-              <label for="student">Yes</label>
-              <input type="checkbox" name="student" id="student" value="student">
-            </fieldset>
-            <fieldset>
-              <legend>Relationship Status</legend>
-              <label for="rel-single">Single</label>
-              <input type="radio" name="relationship-single" id="rel-single" value="rel-single">
-              <label for="rel-married">Married</label>
-              <input type="radio" name="relationship-married" id="rel-married" value="rel-married">
-              <label for="rel-defacto">De Facto Relationship</label>
-              <input type="radio" name="relationship-defacto" id="rel-defacto" value="rel-defacto">
-            </fieldset>
-            <fieldset>
-              <legend>Children?</legend>
-              <label for="children-04">Under 5 Years Old</label>
-              <input type="checkbox" name="children-04" id="children-04" value="children-04">
-              <label for="children-514">5 - 14 Years Old</label>
-              <input type="checkbox" name="children-514" id="children-514" value="children-514">
-              <label for="children-1518">15 - 18 Years Old</label>
-              <input type="checkbox" name="children-1518" id="children-1518" value="children-1518">
-              <label for="children-1922">19 - 22 Years Old</label>
-              <input type="checkbox" name="children-1922" id="children-1922" value="children-1922">
-              <label for="children-23">23+ Years Old</label>
-              <input type="checkbox" name="children-23" id="children-23" value="children-23">
-              <label for="children-0">None</label>
-              <input type="checkbox" name="children-0" id="children-0" value="children-0">
-            </fieldset>
-            <fieldset>
-              <legend>Immigration Status</legend>
-              <label for="immi-citizen">Citizen</label>
-              <input type="radio" name="immi-citizen" id="immi-citizen" value="immi-citizen">
-              <label for="immi-permanent">Permanent Resident</label>
-              <input type="radio" name="immi-permanent" id="immi-permanent" value="immi-permanent">
-              <label for="immi-temporary">Temporary Resident</label>
-              <input type="radio" name="immi-temporary" id="immi-temporary" value="immi-temporary">
-            </fieldset>
-            <fieldset>
-              <legend>Are you an Indigenous Australian or Torres Straight Islander?</legend>
-              <label for="indigenous">Yes</label>
-              <input type="checkbox" name="indigenous" id="indigenous" value="indigenous">
-            </fieldset>
-            <fieldset>
-              <legend>Do you, or someone in your household, use any of the following services?</legend>
-              <label for="services-mental">Mental Health Services</label>
-              <input type="checkbox" name="services" id="services-mental" value="services-mental">
-              <label for="services-physical">Services for Physical Disabilities</label>
-              <input type="checkbox" name="services" id="services-physical" value="services-physical">
-            </fieldset>
-            <button type="submit">Submit</button>
-          </form>
+            <form method="post" action="/">
+              <fieldset>
+                <legend>Ages</legend>
+                <label for="ages-1824">18 - 24</label>
+                <input type="checkbox" name="ages-1824" id="ages-1824" value="ages-1824">
+                <label for="ages-2534">25 - 34</label>
+                <input type="checkbox" name="ages-2534" id="ages-2534" value="ages-2534">
+                <label for="ages-3544">35 - 44</label>
+                <input type="checkbox" name="ages-3544" id="ages-3544" value="ages-3544">
+                <label for="ages-4554">45 - 54</label>
+                <input type="checkbox" name="ages-4554" id="ages-4554" value="ages-4554">
+                <label for="ages-5564">55 - 64</label>
+                <input type="checkbox" name="ages-5564" id="ages-5564" value="ages-5564">
+                <label for="ages-65">65+</label>
+                <input type="checkbox" name="ages-65" id="ages-65" value="ages-65">
+              </fieldset>
+              <fieldset>
+                <legend>Work Status</legend>
+                <label for="work-fulltime">Employed: Full-Time</label>
+                <input type="radio" name="work-fulltime" id="work-fulltime" value="work-fulltime">
+                <label for="work-parttime">Employed: Part-Time</label>
+                <input type="radio" name="work-parttime" id="work-parttime" value="work-parttime">
+                <label for="work-unemployed">Unemployed</label>
+                <input type="radio" name="work-unemployed" id="work-unemployed" value="work;-unemployed">
+              </fieldset>
+              <fieldset>
+                <legend>Yearly Household Income</legend>
+                <label for="income-050">Up to $50K</label>
+                <input type="radio" name="income-050" id="income-050" value="income-050">
+                <label for="income-51100">$51 - $100K</label>
+                <input type="radio" name="income-51100" id="income-51100" value="income-51100">
+                <label for="income-101150">$101 - $150K</label>
+                <input type="radio" name="income-101150" id="income-101150" value="income-101150">
+                <label for="income-151">More than $150K</label>
+                <input type="radio" name="income-151" id="income-151" value="income-151">
+              </fieldset>
+              <fieldset>
+                <legend>Where are you living?</legend>
+                <label for="live-metro">Melbourne</label>
+                <input type="radio" name="live-metro" id="live-metro" value="live-metro">
+                <label for="live-region">Regional Victoria</label>
+                <input type="radio" name="live-region" id="live-region" value="live-region">
+              </fieldset>
+              <fieldset>
+                <legend>Are you a student?</legend>
+                <label for="student">Yes</label>
+                <input type="checkbox" name="student" id="student" value="student">
+              </fieldset>
+              <fieldset>
+                <legend>Relationship Status</legend>
+                <label for="rel-single">Single</label>
+                <input type="radio" name="relationship-single" id="rel-single" value="rel-single">
+                <label for="rel-married">Married</label>
+                <input type="radio" name="relationship-married" id="rel-married" value="rel-married">
+                <label for="rel-defacto">De Facto Relationship</label>
+                <input type="radio" name="relationship-defacto" id="rel-defacto" value="rel-defacto">
+              </fieldset>
+              <fieldset>
+                <legend>Children?</legend>
+                <label for="children-04">Under 5 Years Old</label>
+                <input type="checkbox" name="children-04" id="children-04" value="children-04">
+                <label for="children-514">5 - 14 Years Old</label>
+                <input type="checkbox" name="children-514" id="children-514" value="children-514">
+                <label for="children-1518">15 - 18 Years Old</label>
+                <input type="checkbox" name="children-1518" id="children-1518" value="children-1518">
+                <label for="children-1922">19 - 22 Years Old</label>
+                <input type="checkbox" name="children-1922" id="children-1922" value="children-1922">
+                <label for="children-23">23+ Years Old</label>
+                <input type="checkbox" name="children-23" id="children-23" value="children-23">
+                <label for="children-0">None</label>
+                <input type="checkbox" name="children-0" id="children-0" value="children-0">
+              </fieldset>
+              <fieldset>
+                <legend>Immigration Status</legend>
+                <label for="immi-citizen">Citizen</label>
+                <input type="radio" name="immi-citizen" id="immi-citizen" value="immi-citizen">
+                <label for="immi-permanent">Permanent Resident</label>
+                <input type="radio" name="immi-permanent" id="immi-permanent" value="immi-permanent">
+                <label for="immi-temporary">Temporary Resident</label>
+                <input type="radio" name="immi-temporary" id="immi-temporary" value="immi-temporary">
+              </fieldset>
+              <fieldset>
+                <legend>Are you an Indigenous Australian or Torres Straight Islander?</legend>
+                <label for="indigenous">Yes</label>
+                <input type="checkbox" name="indigenous" id="indigenous" value="indigenous">
+              </fieldset>
+              <fieldset>
+                <legend>Do you, or someone in your household, use any of the following services?</legend>
+                <label for="services-mental">Mental Health Services</label>
+                <input type="checkbox" name="services" id="services-mental" value="services-mental">
+                <label for="services-physical">Services for Physical Disabilities</label>
+                <input type="checkbox" name="services" id="services-physical" value="services-physical">
+              </fieldset>
+              <button type="submit">Submit</button>
+            </form>
 
+          </div>
         </div>
       </div>
     </div>
@@ -134,7 +135,8 @@
       <script type="text/javascript" src="/javascripts/views/budget-view.js"></script>
       <script type="text/javascript" src="/javascripts/views/budgets-view.js"></script>
       <script type="text/javascript" src="/javascripts/routers/router.js"></script>
-      <script type="text/javascript" src="/javascripts/bbApp.js"></script>
+      <script type="text/javascript" src="/javascripts/bb-app.js"></script>
+      <script type="text/javascript" src="/javascripts/d3-helper.js"></script>
     </footer>
   </body>
 </html>
