--- a/views/index.ejs
+++ b/views/index.ejs
@@ -130,6 +130,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
       <script type="text/javascript" src="/javascripts/lib/underscore.js"></script>
       <script type="text/javascript" src="/javascripts/lib/backbone.js"></script>
+      <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
       <script type="text/javascript" src="/javascripts/models/budget.js"></script>
       <script type="text/javascript" src="/javascripts/collections/budgets.js"></script>
       <script type="text/javascript" src="/javascripts/views/budget-view.js"></script>
